--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,8 @@ spring.datasource.url=jdbc:mysql://6ra5fa.h.filess.io:3307/bibliotecadb_growthwa
 spring.datasource.username=bibliotecadb_growthwar
 spring.datasource.password=0236195001c413d0e74a09260f24c743dc137858
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 # ===============================
 # JPA / HIBERNATE
@@ -15,6 +17,15 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+# ===================================================================
+# LOGGING CONFIGURATION
+# ===================================================================
+logging.level.root=INFO
+logging.level.com.biblioteca.app=DEBUG
+logging.level.org.springframework.security=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 # ===============================
 # SERVER
