--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,12 @@
             <groupId>org.thymeleaf.extras</groupId>
             <artifactId>thymeleaf-extras-springsecurity6</artifactId>
         </dependency>
+
+		<!-- Thymeleaf Layout Dialect for layouts -->
+        <dependency>
+            <groupId>nz.net.ultraq.thymeleaf</groupId>
+            <artifactId>thymeleaf-layout-dialect</artifactId>
+        </dependency>
         
         <!-- MySQL Driver -->
         <dependency>
