--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.application.name=BibliotecaVirtual
+spring.output.ansi.enabled=ALWAYS
 
 # ===============================
 # DATABASE
 # ===============================
-spring.datasource.url=jdbc:mysql://6ra5fa.h.filess.io:3307/bibliotecadb_growthwar?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://6ra5fa.h.filess.io:3307/bibliotecadb_growthwar?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=bibliotecadb_growthwar
 spring.datasource.password=0236195001c413d0e74a09260f24c743dc137858
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
